--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,18 @@ body {
 }
 
 div {
-  padding: .5rem;
+  padding: 0;
   text-align: center;
 }
+
+div ul {
+  padding: 0;
+  list-style-type: none;
+}
+div ul li a {
+  display: inline-block;
+  text-decoration: none;
+  margin: .4rem;
+  padding: .5em;
+  border-radius: 8px;
+  border: 3px solid none;
