--- a/css/main.css
+++ b/css/main.css
@@ -28,3 +28,53 @@ div ul li a {
   padding: .5em;
   border-radius: 8px;
   border: 3px solid none;
+}
+
+.btn {
+  font-size: 1.125rem;
+}
+
+.btn-big {
+  font-size: 1.5rem;
+}
+
+.btn-small {
+  font-size: .875rem;
+}
+
+.btn-primary {
+  background-color: #333;
+  color: #fff;
+}
+
+.btn-subtle {
+  background-color: #ccc;
+  color: #fff;
+}
+
+.btn-ghost {
+  border: 3px solid #000;
+  color: #000;
+}
+
+.btn-warning {
+  background-color: #f33;
+  color: #fff;
+}
+
+.btn-primary:hover {
+  background-color: #000;
+}
+
+.btn-subtle:hover {
+  background-color: #333;
+}
+
+.btn-ghost:hover {
+  border: none;
+  background-color: #666;
+}
+
+.btn-warning:hover {
+  background-color: #933;
+}
