--- a/css/main.css
+++ b/css/main.css
@@ -21,15 +21,14 @@ ul {
 div:nth-child(2) a {
   text-align: center;
 }
-div ul li a {
+
+.btn {
   display: inline-block;
   text-decoration: none;
-  margin: .4rem;
-  padding: .5em;
+  list-style-type: none;
+  margin: .6rem;
+  padding: .4em .75em .3em;
   border-radius: 8px;
-  border: 3px solid none;
-}
-
 .btn {
   font-size: 1.125rem;
 }
